# rabbi

./: .env.example  CLAUDE.md  CONTRIBUTING.md  DEPENDENCY_AUDIT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  vercel.json
.github/workflows/: tests.yml
api/: index.py  requirements.txt
backend/: .env.example  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  auth.py  config.py  conversations.py  database.py  dvar_torah.py  llm_client.py  main.py  models.py  payments.py  rate_limiter.py  security.py
backend/app/agents/: __init__.py  base.py  denominations.py  halachic.py  moral.py  orchestrator.py  pastoral.py  rag.py  voice.py
backend/tests/: __init__.py  conftest.py  test_base.py  test_config.py  test_conversations.py  test_database.py  test_halachic.py  test_main.py  test_models.py  test_moral.py  test_orchestrator.py  test_pastoral.py  test_payments.py  test_rag.py  test_rag_benchmark.py  test_security.py  test_voice.py
frontend/: app.js  index.html  styles.css
transcripts/: 1977-08-27_shabbos-parshas-reeh-shabbos-mevorchim-elul-erev-rosh.md  1977-10-05_kuntres-motzei-simchas-torah-5738-part-2.md  1977-10-05_kuntres-motzei-simchas-torah-5738.md  1977-10-08_kuntres-motzei-shabbos-breishis-5738.md  1977-10-15_kuntres-motzoei-shabbos-parshas-noach-5738.md  1977-10-22_kuntres-motzoei-shabbos-parshas-lech-lcho-5738.md  1977-10-29_excerpts-from-kuntres-motzoei-shabbos-kodesh-parshas-chayei.md  1977-11-29_yud-tes-kislev-5738.md  1977-12-14_the-second-day-of-chanuka-5738.md  1977-12-22_asora-bteves-10th-of-teves-5738.md  1978-01-07_motzoei-shabbos-kodesh-mevorchim-shvat-parshas-vaera-5738.md  1978-01-18_yud-shvat-5738.md  1978-01-23_15th-of-shvat-5738.md  1978-02-04_motzoei-shabbos-parshas-mishpatim-5738.md  1978-03-18_motzoei-shabbos-tzav.md  1978-03-25_motzoai-shabbos-parshas-shmini-and-parah-shabbos-mevorchim.md  1978-04-19_yud-alef-nissan-5738.md  1978-04-29_last-day-of-pesach-5738.md  1978-05-06_parshas-acherei-shabbos-mevorchim-iyar.md  1978-05-13_parshas-emor-5738.md  1978-05-25_lag-bomer-5738.md  1978-06-12_motzoei-shavuos-5738.md  1978-06-18_graduating-class-of-beis-rivka-and-staff-members-of-girls.md  1978-07-01_parsha-shelach-shabbos-mevorchim-tammuz.md  1978-07-08_3rd-of-tammuz-5738.md  1978-07-15_motzoei-shabbos-parshas-chukas-10th-of-tammuz-5738.md  1978-07-17_yud-beis-tammuz-5738.md  1978-07-22_motzoei-shabbos-parshas-balak-17-tammuz-5738.md  1978-07-29_motzoei-shabbos-parshas-pinchas-mevorchim-hachodesh.md  1978-08-18_15th-of-av-5738.md  1978-08-23_20th-of-av-5738.md  1978-08-26_motzoei-shabbos-mevorchim-elul-5738.md  1978-09-02_motzoei-shabbos-parshas-nitzavim-5738-erev-rosh-hashanah.md  1978-09-03_rosh-chodesh-elul-5738.md  1978-09-04_second-day-of-rosh-hashanah.md  1978-09-09_motzoei-shabbos-parshas-vayeilech-shabbos-shuvah.md  1978-09-16_motzoei-shabbos-parshas-haazinu-13th-day-of-tishrei-5739.md  1978-09-18_preliminary-remarks-to-the-hakofos-shemini-atzeres-5739.md  1978-09-19_simchas-torah-5739.md  1978-09-20_day-of-simchas-torah-5739.md  (+503 more)
transcripts/in-the-garden-of-the-torah/: balak.md  bamidbar.md  bereishis.md  chayei-sarah.md  devarim.md  lech-lecha.md  noach.md  shmos.md  tetzaveh.md  toldos.md  vayeira.md  vayikra.md  vayishlach.md  yisro.md
transcripts/likkutei-sichot-vol6/: bereishis.md  lech-lecha.md  mikeitz.md  noach.md  toldos.md  vayechi.md  vayeira.md  vayeishev.md  vayeitzei.md  vayigash.md  vayishlach.md
